fix for follow btn not showing follow

--- a/sass/_extend-styles.scss
+++ b/sass/_extend-styles.scss
@@ -60,6 +60,7 @@
   color: $dark_gray;
   text-align: center;
   display: inline-block;
+  border: 1px solid #f3f3f3;
 
   &:hover {
     text-decoration: none;
